# geyser

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  equity_research_report.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  run_analysis.py  run_analysis_enhanced.py  setup.py
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
src/: __init__.py  cache_manager.py  config.py  config_loader.py  data_collector.py  exceptions.py  financial_analysis.py  logger.py  peer_comparison.py  report_generator.py  sentiment_analysis.py  validators.py  visualizations.py
tests/: __init__.py  conftest.py  test_cache_manager.py  test_config_loader.py  test_validators.py
